sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: ';' expected but ',' found.
    ecart = ecart / 1,3
                     ^